# StrategyGame

./: .clang-format  .gitignore  .gitmodules  ;  CMakeLists.txt  CMakeLists_windows.txt  Cargo.toml  FieldsOfMars.aps  FieldsOfMars.sln  FieldsOfMars.vcxproj  FieldsOfMars.vcxproj.filters  LICENSE  [  build.rs  build.sh  compile_commands.json  compile_flags.txt  install.sh  notes.md  output.json  packages.config  resource.h  run.ps1  run.sh  shortcuts.kksrc  steam_appid.txt  temp.txt  todo.md  todo.yml  todos.md  windows.ps1
.archive/pages/: save_games.hpp  singleplayer_lobby.hpp
.archive/pages/campaign/: overview_panel.hpp
.cache/clangd/index/: animated.hpp.CA801B43F541C430.idx  animation.hpp.CA2AEC20F9421DDF.idx  archetypes.hpp.6BF21DE26630478E.idx  common.hpp.460C592E700C4DA5.idx  editor.hpp.C79F895A4E032F67.idx  entt.hpp.F938E210DA8D4922.idx  events.hpp.FE07231BB9A7008B.idx  guilib.hpp.01F66F6CCB463E66.idx  input.hpp.F01308BDCE805D2F.idx  main.cpp.4A5BE866ADEC321D.idx  main.cpp.6AB5E04C0F2CFA14.idx  map.hpp.7DAC95F80504B625.idx  movement.hpp.F8B5ECB99E256355.idx  player.hpp.4A30940DB9811562.idx  province.hpp.877AEBEC9037C577.idx  provinces.hpp.D9D8C3E5B6E4239D.idx  raygui.h.7A2A15AA93EA8F13.idx  raylib.h.5B97A9D616EA78E1.idx  raymath.h.096CEB77C16DE235.idx  renderer.hpp.B7D9867AF85C5FE8.idx  resource.hpp.BD715DF11C2E33E2.idx  selected.hpp.CF2C8E59B1C13ED3.idx  selection.hpp.C750C952A6AA11E9.idx  sight.hpp.8B971C367ECAEAB6.idx  spawn.hpp.8C1CA09F1FA0366D.idx  state.hpp.BF23E98422446396.idx  terrain.hpp.10EB7A1498BECA67.idx  tile.hpp.69E28C336A3F1948.idx  ui.hpp.E79D36F8F6A92049.idx  unit.hpp.3AE79207D8E111F6.idx
.old/: Networking.hpp  network.hpp  ui.hpp
.old/misc/: build.sh  old.cpp
.old/misc/editor/: editor.hpp
.old/misc/old/: factions.cpp  factions.hpp  old.cpp
.old/shaders/: outline.fs
.old/ui/: column_alignment.hpp  game_ui.hpp  game_ui_system.hpp  main_menu_ui.hpp  row_alignment.hpp
.old/ui/irongui/: irongui.hpp  layout.hpp
app/assets/shaders/: pixel.fs
app/data/: buildings.hpp  factions.hpp  factions.json  resources.hpp  settlement.hpp
app/src/: app.hpp  assets.hpp  campaign.hpp  game.hpp  main.cpp
app/src/interface/: actions.hpp  builders.hpp  clickable.hpp  element.cpp  element.hpp  immediate.hpp  input.hpp  ui_builder.hpp  ui_lookup.hpp  ui_manager.hpp  ui_shared.hpp  ui_system.hpp  ui_utils.hpp  updates.hpp
app/src/network/: client.hpp  host.hpp  (+2 more)
assets/data/: actors.json  factions.json  factions.json.bak  factions.txt  units.json
assets/shaders/: pixel.fs  pixel.vs
compile_configs/: compile_commands.json.windows
configs/: compile_commands.json.linux
creative/Aseprite/: Buildings1.aseprite  NorthStar.aseprite  Playground.aseprite  Playground2.aseprite  Resources.aseprite  background.aseprite  beanser.aseprite  default.msk  foreground.aseprite  hexagon.aseprite  palette-fornow.aseprite  palette.aseprite
creative/Misc/: Campaign ideas.txt  UnitOverview.txt  grand.xcf  medieval.xcf  template.xcf
creative/ProMotions/: Buildings.pmp  HexTerrain.pmp  Terrain.pmp  aTrees.pmp  palette_test.pmp
creative/PyxelEdits/: elf.pyxel  template.pyxel  units.pyxel
data/: actor.hpp  actors.json  ai.hpp  biomes.hpp  biomes.yml  buildings.hpp  civs.json  factions.hpp  factions.json  possible-civs.json  processed_materials.json  products.json  raw_materials.json  recipes.hpp  recipes.yml  resources.hpp  resources.json  resources.yml  settlement.hpp
iron/: build.zig  iron.hpp
iron/src/: main.zig
irongui/: Cargo.toml  build.rs
irongui/src/: bridge.cc  lib.rs
misc/: build.sh  old.cpp
misc/old/: old.cpp
net/: Cargo.toml  network.hpp  server.cpp
net/client/: main.go
net/server/: main.go  server.cpp  server.hpp
net/src/: main.rs
old-data/: processed_materials.json  products.json  really.json  temp.json
old-net/server/: server.hpp
scripts/: git.sh  install.sh  linux.sh  sprgen.py  windows.ps1
server/: server.cpp
sprgen/: main.py  old.py
src/: actors.cpp  actors.h  actors.hpp  assets.hpp  campaign.hpp  commands.hpp  common.cpp  common.h  common.hpp  events.hpp  factions.cpp  factions.h  factions.hpp  game.hpp  global.hpp  input.cpp  input.hpp  lib.rs  main.cpp  map.cpp  map.h  map.hpp  networking.hpp  player.hpp  renderer.hpp  resource.hpp  save.hpp  settings.hpp  state.hpp  ui.cpp  ui.h  utils.hpp
src/archetypes/: archetypes.hpp
src/components/: actor.hpp  ai.hpp  animated.hpp  element.rs  event.hpp  mod.rs  panel.rs  player.hpp  province.hpp  selected.hpp  settlement.hpp  sight.hpp  text_label.rs  tile.hpp  unit.hpp
src/data/: actors.json  biomes.hpp  buildings.hpp  factions.hpp  factions.json  resource.hpp  resources.hpp  resources.json  units.json
src/editor/: editor.hpp
src/entities/: archetypes.hpp
src/globals/: globals.rs
src/guilib/: gui_system.hpp
src/interface/: ui_shared.hpp
src/network/: client.hpp  host.hpp  network.hpp
src/pages/: main_menu.rs  mod.rs
src/renderer/: fonts.hpp  renderer.hpp  textures.hpp
src/shaders/: pixel.fs  pixel.vs
src/shared/: common.hpp  fonts.hpp  global.hpp  manager.hpp  save.hpp  state.hpp  textures.hpp  utils.hpp
src/systems/: actor_system.hpp  actors.cpp  actors.hpp  ai_system.hpp  animate.cpp  animate.hpp  animation.cpp  animation.hpp  animation_system.hpp  event_system.hpp  map.cpp  map.hpp  map_system.hpp  movement.cpp  movement.hpp  movement_system.hpp  overlay_system.hpp  player_system.hpp  province_system.hpp  provinces.cpp  provinces.hpp  resource_system.hpp  selection.cpp  selection.hpp  selection_system.hpp  settlement_system.hpp  spawn.cpp  spawn.hpp  spawn_system.hpp  terrain.cpp  terrain.hpp
src/ui/: actions.hpp  column_alignment.hpp  common.h  content.hpp  guilib.hpp  row_alignment.hpp  tree.hpp  ui.cpp  ui.h  ui.hpp  ui_actions.hpp  ui_common.hpp  ui_components.hpp  ui_content.hpp  ui_lookups.hpp  ui_shared.hpp  ui_system.hpp  ui_utils.hpp  updates.hpp
src/world/: player.hpp  player_system.hpp
tools/sprgen/: Template.aseprite  sprgen.py
tools/sprgen_v2/: bak.main.py  main.py
tools/sprgen_v3/: AnimationsWorkshop.aseprite  main.py
(+823 files in other folders)
